// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > model > postModel > 200 > ok 1`] = `
{
  "model": {
    "_id": "test",
  },
}
`;

exports[`routes > model > postModel > 400 > no description 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "Required",
          "path": [
            "body",
            "description",
          ],
          "received": "undefined",
        },
      ],
    },
    "message": "Path: body.description - Message: Required",
    "name": "Bailo Error",
  },
}
`;

exports[`routes > model > postModel > audit > expected call 1`] = `
{
  "_id": "test",
}
`;
